Fixing the slider's height on mobile

--- a/style.css
+++ b/style.css
@@ -97,7 +97,8 @@ header .key-figures .key-figures__list .key-figure {
   width: 80vw;
   padding: 2rem;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 24px;
   justify-content: center;
 }
